added database integration middleware

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -17,10 +17,16 @@
       </tr>
       <% } %>
 
+
     </table>
 
+    <% for(var i=0; i < 3; i++) { %>
+        <!-- <% include delegate %>-->
+    <% } %>-->
 
-    <% include element %>
+
     <p>Welcome to <%= title %></p>
   </body>
 </html>
+
+
