--- a/views/delegate.ejs
+++ b/views/delegate.ejs
@@ -6,11 +6,13 @@
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Delegate Options</title>
-    <link href="css/bootstrap.min.css" rel="stylesheet">
-    <script src="js/bootstrap.min.js"></script>
-    <script src="js/jquery-3.2.1.min.js"></script>
-    <script src="js/jquery-3.2.1.js"></script>
-    <link rel="stylesheet" href="style.css">
+
+    <link href="/stylesheets/bootstrap.min.css" rel="stylesheet">
+    <script src="/javascripts/bootstrap.min.js"></script>
+    <script src="/javascripts/jquery-3.2.1.min.js"></script>
+    <script src="/javascripts/jquery-3.2.1.js"></script>
+    <link rel="stylesheet" href="/stylesheets/style.css">
+
 </head>
 <body>
     <h1>Doctor's Clinic</h1>
@@ -29,7 +31,7 @@
         </div>
         <br><br><br><br><br>
         <button type="button" class=" btn-warning btn-lg bton">Add</button>
-        <a href="login.html"><button  type="button" class=" btn-warning btn-lg bton ">Logout</button></a>
+        <a href="login.ejs"><button type="button" class=" btn-warning btn-lg bton ">Logout</button></a>
     </div>
 </body>
 </html>
