--- a/views/doctor.ejs
+++ b/views/doctor.ejs
@@ -6,11 +6,13 @@
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Doctor Panel</title>
-    <link href="css/bootstrap.min.css" rel="stylesheet">
-    <script src="js/bootstrap.min.js"></script>
-    <script src="js/jquery-3.2.1.min.js"></script>
-    <script src="js/jquery-3.2.1.js"></script>
-    <link rel="stylesheet" href="style.css">
+
+    <link href="/stylesheets/bootstrap.min.css" rel="stylesheet">
+    <script src="/javascripts/bootstrap.min.js"></script>
+    <script src="/javascripts/jquery-3.2.1.min.js"></script>
+    <script src="/javascripts/jquery-3.2.1.js"></script>
+    <link rel="stylesheet" href="/stylesheets/style.css">
+
 </head>
 <body>
 <nav class="navbar navbar-default navbar-fixed-top">
