--- a/views/patient.ejs
+++ b/views/patient.ejs
@@ -32,7 +32,7 @@
 		            <span class="icon-bar"></span>
 		            <span class="icon-bar"></span>
         		</button>
-        		<a class="navbar-brand" href="../index.html">Doctor's Clinic</a>
+        		<a class="navbar-brand" href="/">Doctor's Clinic</a>
         	</div>
 
         	<div class="collapse navbar-collapse" id="navigation-example">
