--- a/views/signUp.ejs
+++ b/views/signUp.ejs
@@ -1,22 +1,23 @@
+
 <!doctype html>
 <html lang="en">
 <head>
-    <meta charset="utf-8" />
+    <meta charset="utf-8"/>
     <link rel="apple-touch-icon" sizes="76x76" href="images/apple-icon.png">
     <link rel="icon" type="image/png" href="images/favicon.png">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"/>
 
     <title>Sign up</title>
 
-    <meta content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0' name='viewport' />
+    <meta content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0' name='viewport'/>
 
     <!--     Fonts and icons     -->
-    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons" />
-    <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700" />
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/latest/css/font-awesome.min.css" />
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons"/>
+    <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700"/>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/latest/css/font-awesome.min.css"/>
 
     <!-- CSS Files -->
-    <link href="stylesheets/bootstrap.min.css" rel="stylesheet" />
+    <link href="stylesheets/bootstrap.min.css" rel="stylesheet"/>
     <link href="stylesheets/material-kit.css" rel="stylesheet"/>
 
 </head>
@@ -63,8 +64,7 @@
 
     <div class="main main-raised">
 
-
-        <form class="form" method="post" action="">
+        <form class="form" method="post" action="/signup" enctype="multipart/form-data">
             <div class="section" id="javascriptComponents">
                 <div class="container">
                     <div class="title">
@@ -72,173 +72,172 @@
                     </div>
 
                     <br> <br>
-                    <div class="row" id="modals">
+                    <form method="post" action="/signup"  encType="multipart/form-data">
+                        <div class="row" id="modals">
 
-                        <div class="col-sm-6  col-md-offset-1">
+                            <div class="col-sm-6  col-md-offset-1">
 
-                            <div class="row">
-                                <div class="col-md-7 col-md-offset-1">
-                                    <div class="title">
-                                        <h4>Personal info</h4>
-                                    </div>
-
-                                </div>
-                            </div>
-
-                            <div class="col-md-9">
-                                <div class="form-group label-floating">
-                                    <label class="control-label">Name</label>
-
-                                    <input type="text" class="form-control" required>
-
-                                </div>
-                            </div>
-
-
-                            <div class="col-sm-9">
-                                <div class="form-group label-floating">
-                                    <label class="control-label">City</label>
-
-                                    <input type="text" class="form-control" required>
-
-                                </div>
-                            </div>
-
-                            <div class="col-sm-9">
-                                <div class="form-group label-floating">
-                                    <label class="control-label">Zip Code</label>
-
-                                    <input type="number" class="form-control" required>
-
-
-                                </div>
-                            </div>
-
-
-                            <div class="col-sm-9">
-                                <div class="form-group label-floating">
-                                    <label class="control-label">Birth Date</label>
-                                    <input title="Birth Date" class="datepicker form-control" type="text" required/>
-
-                                </div>
-                            </div>
-
-                            <div class="col-sm-9">
-                                <div class="form-group label-floating">
-                                    <label class="control-label">Phone</label>
-
-                                    <input type="tel" class="form-control" required>
-
-                                </div>
-                            </div>
-
-                            <div class="col-sm-9">
-                                <div class="form-group label-floating">
-                                    <label class="control-label">Email</label>
-
-                                    <input type="email" class="form-control" required>
-
-                                </div>
-                            </div>
-
-
-                            <div class="col-sm-9">
-                                <div class="form-group label-floating">
-                                    <label class="control-label">Admission Date</label>
-                                    <input title="Admission Date" class="datepicker form-control" type="text" required/>
-
-                                </div>
-                            </div>
-
-
-                            <div class="col-sm-9">
-                                <div class="form-group label-floating">
-                                    <label class="control-label">SSN</label>
-
-                                    <input type="number" class="form-control" required>
-
-                                </div>
-                            </div>
-
-                            <div class="row">
-                                <div class="col-md-7 col-md-offset-2">
-                                    <div class="title">
-                                        <h4><br></h4>
-                                    </div>
-
-                                </div>
-                            </div>
-
-                            <div class="row">
-                                <div class="col-md-7 col-md-offset-1">
-                                    <div class="title">
-                                        <h4>Account info</h4>
-                                    </div>
-
-                                </div>
-                            </div>
-
-
-                            <div class="col-sm-9">
-                                <div class="form-group label-floating">
-                                    <label class="control-label">User Name</label>
-
-                                    <input type="text" class="form-control" required>
-
-                                </div>
-                            </div>
-
-                            <div class="col-sm-9">
-                                <div class="form-group label-floating">
-                                    <label class="control-label">Password</label>
-
-                                    <input type="password" class="form-control" required/>
-
-                                </div>
-                            </div>
-
-
-                            <div class="col-md-9 col-md-offset-3">
-                                <button class="btn btn-primary btn-lg"
-                                        data-container="body"> Sign Up
-                                </button>
-                            </div>
-
-                        </div>
-
-                        <div class="section landing-section">
-                            <div class="col-md-3">
-                                <div class="title col-sm-offset-2 ">
-                                    <h4>Personal image</h4>
-                                </div>
-
-                                <div class="col-sm-12 col-sm-offset-1">
-                                    <br>
-                                    <img src="/images/christian.jpg" alt="Raised Image"
-                                         class="img-rounded img-responsive img-raised">
-
-
-                                    <div class="row">
-                                        <br><br>
-                                        <div class="col-md-9 col-md-offset-2 text-center">
-                                            <button class="btn btn-primary btn-round ">
-                                                <i class="material-icons">photo</i> Upload
-                                            </button>
+                                <div class="row">
+                                    <div class="col-md-7 col-md-offset-1">
+                                        <div class="title">
+                                            <h4>Personal info</h4>
                                         </div>
+
                                     </div>
+                                </div>
+
+                                <div class="col-md-9">
+                                    <div class="form-group label-floating">
+                                        <label class="control-label">Name</label>
+
+                                        <input name="Name" type="text" class="form-control"  maxlength="100" required>
+
+                                    </div>
+                                </div>
 
 
+                                <div class="col-sm-9">
+                                    <div class="form-group label-floating">
+                                        <label class="control-label">City</label>
+
+                                        <input name="City" type="text" class="form-control" maxlength="50" required>
+
+                                    </div>
+                                </div>
+
+                                <div class="col-sm-9">
+                                    <div class="form-group label-floating">
+                                        <label class="control-label">Zip Code</label>
+
+                                        <input  name="Zip" type="text" class="form-control"  pattern = "[0-9]{5,6}" required>
+
+
+                                    </div>
+                                </div>
+
+
+                                <div class="col-sm-9">
+                                    <div class="form-group label-static">
+                                        <label class="control-label">Birth Date</label>
+                                        <input name="Birth Date" title="Birth Date" class="datepicker form-control"
+                                               type="text" required/>
+
+                                    </div>
+                                </div>
+
+                                <div class="col-sm-9">
+                                    <div class="form-group label-floating">
+                                        <label class="control-label">Phone</label>
+
+                                        <input name="Phone" type="text" class="form-control"  pattern = "[0-9]{10,16}" required>
+
+                                    </div>
+                                </div>
+
+                                <div class="col-sm-9">
+                                    <div class="form-group label-floating">
+                                        <label class="control-label">Email</label>
+
+                                        <input name="Email" type="email" class="form-control" maxlength="100" required>
+
+                                    </div>
+                                </div>
+
+
+                                <div class="col-sm-9">
+                                    <div class="form-group label-floating">
+                                        <label class="control-label">SSN</label>
+
+                                        <input name="SSN" type="text" class="form-control" pattern = "[0-9]{12}" required>
+
+                                    </div>
+                                </div>
+
+                                <div class="row">
+                                    <div class="col-md-7 col-md-offset-2">
+                                        <div class="title">
+                                            <h4><br></h4>
+                                        </div>
+
+                                    </div>
+                                </div>
+
+                                <div class="row">
+                                    <div class="col-md-7 col-md-offset-1">
+                                        <div class="title">
+                                            <h4>Account info</h4>
+                                        </div>
+
+                                    </div>
+                                </div>
+
+
+                                <div class="col-sm-9">
+                                    <div class="form-group label-floating">
+                                        <label class="control-label">User Name</label>
+
+                                        <input name="username" type="text" class="form-control" maxlength="64" required>
+
+                                    </div>
+                                </div>
+
+                                <div class="col-sm-9">
+                                    <div class="form-group label-floating">
+                                        <label class="control-label">Password</label>
+
+                                        <input name="Password" type="password" class="form-control" maxlength="64" required/>
+
+                                    </div>
+                                </div>
+
+
+                                <div class="col-md-5 col-md-offset-3">
+                                    <input type="submit" class="btn btn-primary btn-lg"
+                                           value="Sign Up" required/>
                                 </div>
 
 
                             </div>
+
+                            <div class="section landing-section">
+                                <div class="col-md-3">
+                                    <div class="title col-sm-offset-2 ">
+                                        <h4>Personal image</h4>
+                                    </div>
+
+                                    <div class="col-sm-12 col-sm-offset-1">
+                                        <br>
+                                        <img  id="blah" src="/images/christian.jpg" alt="Raised Image"
+                                             class="img-rounded img-responsive img-raised">
+
+
+
+
+                                    </div>
+
+
+                                        <br><br>
+                                        <!--      <input class="col-md-9 col-md-offset-2 text-center btn btn-primary btn-round"
+
+                                                    type='file'>
+  -->
+                                        <div class="col-md-9 col-md-offset-4 ">
+
+                                            <label class=" btn btn-default btn-file btn-primary btn-round">
+                                                Browse
+                                                <input name="image" type="file" style="display: none; " id="imgInp" required>
+
+                                                <i class="material-icons">photo</i>
+                                            </label>
+
+                                        </div>
+                                </div>
+                            </div>
+                            <br><br>
+
                         </div>
 
-
-                        <br><br>
-
-
-                    </div>
+                    </form>
                 </div>
             </div>
         </form>
@@ -284,6 +283,24 @@
 
 <!-- Control Center for Material Kit: activating the ripples, parallax effects, scripts from the example pages etc -->
 <script src="javascript/material-kit.js" type="text/javascript"></script>
+<script >
+    function readURL(input) {
 
+        if (input.files && input.files[0]) {
+            var reader = new FileReader();
+
+            reader.onload = function (e) {
+                $('#blah').attr('src', e.target.result);
+            }
+
+            reader.readAsDataURL(input.files[0]);
+        }
+
+    }
+
+    $("#imgInp").change(function(){
+        readURL(this);
+    });
+</script>
 </html>
 
